changes in button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <span class="price">$59.99/year</span>
         <span class="change"><a href="#">Change</a></span>
       </div>
-      <div class="inside-box button"><a class="button button_text" href="#">Proceed to Payment</a>
+      <div class="inside-box button"><a class="button_text" href="#">Proceed to Payment</a>
       </div>
       <div class="inside-box cancel"><a href="#">Cancel Order</a></div>
     </div>
